--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -146,6 +146,12 @@ letter-spacing: 0em;
 text-align: right;
 color:  #262626;
 }
+.caixa-sugestao2{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
 .caixa-sugestao1{
     display: flex;
     justify-content: space-between;
@@ -282,7 +288,6 @@ color: #262626;
 margin-bottom: 60px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     background-color: #FFFFFF;
 }
 .post h1{
